--- a/index.html
+++ b/index.html
@@ -362,10 +362,20 @@
         </div>
     </div>
     
-    <!-- Footer -->
-    <div class="footer">
-        &copy; 2023 After Hours Hosting. All rights reserved.
-    </div>
+<!-- Footer -->
+<div class="footer">
+    <p>&copy; 2023 After Hours Hosting. All rights reserved.</p>
+    <nav>
+        <ul>
+            <li><a href="/terms">Terms of Service</a></li>
+            <li><a href="/privacy">Privacy Policy</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+        </ul>
+    </nav>
+    <p>123 Main Street, City, Country</p>
+    <p>Email: info@afterhourshosting.com</p>
+    <p>Phone: +1 123-456-7890</p>
+</div>
     
     <!-- JavaScript -->
     <script>
