--- a/index.html
+++ b/index.html
@@ -365,16 +365,16 @@
 <!-- Footer -->
 <div class="footer">
     <p>&copy; 2023 After Hours Hosting. All rights reserved.</p>
-    <nav>
-        <ul>
-            <li><a href="/terms">Terms of Service</a></li>
-            <li><a href="/privacy">Privacy Policy</a></li>
-            <li><a href="/contact">Contact Us</a></li>
-        </ul>
-    </nav>
-    <p>123 Main Street, City, Country</p>
-    <p>Email: info@afterhourshosting.com</p>
-    <p>Phone: +1 123-456-7890</p>
+    <p>
+        <a href="/terms">Terms of Service</a> |
+        <a href="/privacy">Privacy Policy</a> |
+        <a href="/contact">Contact Us</a>
+    </p>
+    <p>
+        Email: info@afterhourshosting.com <br>
+        Phone: +1 (123) 456-7890 <br>
+        Address: 1234 Main Street, City, State, 12345
+    </p>
 </div>
     
     <!-- JavaScript -->
