--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
 <div class="footer">
     <p>&copy; 2023 After Hours Hosting. All rights reserved.</p>
     <p>
-        <a href="/terms">Terms of Service</a> |
-        <a href="/privacy">Privacy Policy</a> |
-        <a href="/contact">Contact Us</a>
+        <a href="/terms" style="color: #fff;">Terms of Service</a> |
+        <a href="/privacy" style="color: #fff;">Privacy Policy</a> |
+        <a href="/contact" style="color: #fff;">Contact Us</a>
     </p>
-    <p>
+    <p style="color: #fff;">
         Email: info@afterhourshosting.com <br>
         Phone: +1 (123) 456-7890 <br>
         Address: 1234 Main Street, City, State, 12345
