--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     
 <!-- Footer -->
 <div class="footer">
-    <p>&copy; 2023 After Hours Hosting. All rights reserved.</p>
+    <p>&copy; 2023 After Hours Hosting. All rights reserved. All trademarks acknowledged.</p>
     <p>
         <a href="/terms" style="color: #fff;">Terms of Service</a> |
         <a href="/privacy" style="color: #fff;">Privacy Policy</a> |
@@ -372,11 +372,11 @@
     </p>
     <p style="color: #fff;">
         Email: info@afterhourshosting.com <br>
-        Phone: +1 (123) 456-7890 <br>
+        Phone: +1 (123) 456-7890 (Mon-Fri, 9am-5pm) <br>
         Address: 1234 Main Street, City, State, 12345
     </p>
 </div>
-    
+
     <!-- JavaScript -->
     <script>
         function toggleMenu() {
