--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             background-color: #333;
             padding: 10px;
             display: flex;
-            justify-content: space-between;
             align-items: center;
             position: fixed;
             top: 0;
@@ -37,6 +36,10 @@
             margin-right: 10px;
             border-radius: 5px;
             transition: background-color 0.3s;
+        }
+        
+        .navbar-desktop a:first-child {
+            margin-left: 10px;
         }
         
         .navbar-desktop a:hover {
