--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Before Hours Hosting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         /* Global styles */
