Started Implemeneting WebPulseX API

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Before Hours Hosting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://webpulsex.com/public/5efb2c13752d7324/main.js"></script> <!-- The WebPulseX script, yours will look differnt. DON'T use this script -->
     <style>
         /* Global styles */
         * {
